# CSPR-050-DEVxDAO-Grant

./: .gitignore  Makefile  README.MD  README.md
contract/: Cargo.toml
contract/src/: data.rs  entry_points.rs  main.rs
eth-contract/: ABI.txt  AGLDToken.sol  Assembly.txt  Bytecode.txt  DevDoc.txt  FunctionHashes.txt  GasEstimates.txt  MAINNNET%20URL.txt  MetadashHash.txt  Metadata.txt  RINKEBY%20ADDRESS.txt  RunTime%20Bytecode.txt  Swarm%20Location.txt  UserDoc.txt  Web3Deploy.txt
tests/: Cargo.toml
tests/src/: lib.rs  poc050.rs  tests.rs  tests_casper.rs  tests_mint.rs
