[package]
name = "contract"
version = "0.1.0"
authors = ["Victor Kozub <web3future@gmail.com>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.3.2" }
types = { package = "casper-types", version="1.3.2" }
uint = "=0.9.1"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
