[package]
name = "tests"
version = "0.2.1"
authors = ["Victor Kozub <web3future@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "=1.3.2"
casper-types = "=1.3.2"
casper-engine-test-support = "=1.3.2"
indexmap = "=1.7.0"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
